updated JOSS Paper

--- a/Paper/citations.bib
+++ b/Paper/citations.bib
@@ -54,20 +54,50 @@
 }
 
 @article(madden2002,
-  author = {Madden, T.},
-  doi = {},
-  issn = {},
+  author = {Madden, Tom.},
   journal = {McEntyre J, Ostell J, editors. The NCBI Handbook. Bethesda (MD): National Center for Biotechnology Information (US)},
-  month = {},
-  number = {},
-  pages = {},
+  chapter = {16},
+  pages = {1--15},
   title = {{The BLAST Sequence Analysis Tool [Updated 2003 Aug 13]}},
   url = {https://unmc.edu/bsbc/docs/NCBI_blast.pdf},
-  volume = {},
   year = {2002}
 }
 
+@article{johnson2008,
+	title = {{NCBI} {BLAST}: a better web interface},
+	volume = {36},
+	issn = {1362-4962},
+	doi = {10.1093/nar/gkn201},
+	shorttitle = {{NCBI} {BLAST}},
+	abstract = {Basic Local Alignment Search Tool ({BLAST}) is a sequence similarity search program. The public interface of {BLAST}, http://www.ncbi.nlm.nih.gov/blast, at the {NCBI} website has recently been reengineered to improve usability and performance. Key new features include simplified search forms, improved navigation, a list of recent {BLAST} results, saved search strategies and a documentation directory. Here, we describe the {BLAST} web application's new features, explain design decisions and outline plans for future improvement.},
+	pages = {W5--9},
+	issue = {Web Server issue},
+	journaltitle = {Nucleic Acids Research},
+	shortjournal = {Nucleic Acids Res.},
+	author = {Johnson, Mark and Zaretskaya, Irena and Raytselis, Yan and Merezhuk, Yuri and {McGinnis}, Scott and Madden, Thomas L.},
+	date = {2008-07-01},
+	pmid = {18440982},
+	pmcid = {PMC2447716},
+	keywords = {Databases, Genetic, Internet, National Library of Medicine (U.S.), Sequence Alignment, Software, United States, User-Computer Interface}
+}
 
+@article{camacho2009,
+        title = {{BLAST}+: architecture and applications},
+        volume = {10},
+        issn = {1471-2105},
+        url = {https://doi.org/10.1186/1471-2105-10-421},
+        doi = {10.1186/1471-2105-10-421},
+        shorttitle = {{BLAST}+},
+        abstract = {Sequence similarity searching is a very important bioinformatics task. While Basic Local Alignment Search Tool ({BLAST}) outperforms exact methods through its use of heuristics, the speed of the current {BLAST} software is suboptimal for very long queries or database sequences. There are also some shortcomings in the user-interface of the current command-line applications.},
+        pages = {421},
+        number = {1},
+        journaltitle = {{BMC} Bioinformatics},
+        shortjournal = {{BMC} Bioinformatics},
+        author = {Camacho, Christiam and Coulouris, George and Avagyan, Vahram and Ma, Ning and Papadopoulos, Jason and Bealer, Kevin and Madden, Thomas L.},
+        urldate = {2020-08-25},
+        date = {2009-12-15},
+        file = {Snapshot:/home/mcosi/Zotero/storage/49PM6UQ9/1471-2105-10-421.html:text/html;Full Text:/home/mcosi/Zotero/storage/J8Y5TZBR/Camacho et al. - 2009 - BLAST+ architecture and applications.pdf:application/pdf}
+}
 @article{merchant2016,
 	title = {The {iPlant} {Collaborative}: {Cyberinfrastructure} for {Enabling} {Data} to {Discovery} for the {Life} {Sciences}},
 	volume = {14},
@@ -104,7 +134,7 @@
 	pages = {55--69}
 }
 
-@inproceedings{stewart2015,
+@article{stewart2015,
 	address = {St. Louis, Missouri},
 	title = {Jetstream: a self-provisioned, scalable science and engineering cloud environment},
 	isbn = {9781450337205},
