updated JOSS Paper

--- a/Paper/citations.bib
+++ b/Paper/citations.bib
@@ -1,149 +1,120 @@
-@article(madden2002,
-  author = {Madden, Tom.},
+@article{madden2002,
+  author = {Madden, Thomas L.},
   journal = {McEntyre J, Ostell J, editors. The NCBI Handbook. Bethesda (MD): National Center for Biotechnology Information (US)},
   chapter = {16},
   pages = {1--15},
-  title = {{The BLAST Sequence Analysis Tool [Updated 2003 Aug 13]}},
+  title = {The BLAST Sequence Analysis Tool [Updated 2003 Aug 13]},
   url = {https://unmc.edu/bsbc/docs/NCBI_blast.pdf},
   year = {2002}
 }
 
 @article{form2011,
-  title = {Ten {Simple} {Rules} for {Teaching} {Bioinformatics} at the {High} {School} {Level}},
+  title = {Ten Simple Rules for Teaching Bioinformatics at the High School Level},
   volume = {7},
   issn = {1553-7358},
   url = {https://journals.plos.org/ploscompbiol/article?id=10.1371/journal.pcbi.1002243},
   doi = {10.1371/journal.pcbi.1002243},
-  language = {en},
   number = {10},
-  urldate = {2020-08-14},
   journal = {PLOS Computational Biology},
   author = {Form, David and Lewitter, Fran},
-  month = oct,
+  month = {oct},
   year = {2011},
-  keywords = {Bioinformatics, Schools, BLAST algorithm, Human learning, Evolutionary genetics, Obesity, Protein structure comparison, RNA structure},
   pages = {e1002243}
 }
 
 @article{shaffer2010,
-	title = {The {Genomics} {Education} {Partnership}: {Successful} {Integration} of {Research} into {Laboratory} {Classes} at a {Diverse} {Group} of {Undergraduate} {Institutions}},
+  title = {The Genomics Education Partnership: Successful Integration of Research into Laboratory Classes at a Diverse Group of Undergraduate Institutions},
 	volume = {9},
 	issn = {1931-7913},
-	shorttitle = {The {Genomics} {Education} {Partnership}},
 	url = {https://www.lifescied.org/doi/10.1187/09-11-0087},
 	doi = {10.1187/09-11-0087},
-	abstract = {Genomics is not only essential for students to understand biology but also provides unprecedented opportunities for undergraduate research. The goal of the Genomics Education Partnership (GEP), a collaboration between a growing number of colleges and universities around the country and the Department of Biology and Genome Center of Washington University in St. Louis, is to provide such research opportunities. Using a versatile curriculum that has been adapted to many different class settings, GEP undergraduates undertake projects to bring draft-quality genomic sequence up to high quality and/or participate in the annotation of these sequences. GEP undergraduates have improved more than 2 million bases of draft genomic sequence from several species of Drosophila and have produced hundreds of gene models using evidence-based manual annotation. Students appreciate their ability to make a contribution to ongoing research, and report increased independence and a more active learning approach after participation in GEP projects. They show knowledge gains on pre- and postcourse quizzes about genes and genomes and in bioinformatic analysis. Participating faculty also report professional gains, increased access to genomics-related technology, and an overall positive experience. We have found that using a genomics research project as the core of a laboratory course is rewarding for both faculty and students.},
-	language = {en},
 	number = {1},
 	urldate = {2020-08-14},
 	journal = {CBE—Life Sciences Education},
 	author = {Shaffer, Christopher D. and Alvarez, Consuelo and Bailey, Cheryl and Barnard, Daron and Bhalla, Satish and Chandrasekaran, Chitra and Chandrasekaran, Vidya and Chung, Hui-Min and Dorer, Douglas R. and Du, Chunguang and Eckdahl, Todd T. and Poet, Jeff L. and Frohlich, Donald and Goodman, Anya L. and Gosser, Yuying and Hauser, Charles and Hoopes, Laura L.M. and Johnson, Diana and Jones, Christopher J. and Kaehler, Marian and Kokan, Nighat and Kopp, Olga R. and Kuleck, Gary A. and McNeil, Gerard and Moss, Robert and Myka, Jennifer L. and Nagengast, Alexis and Morris, Robert and Overvoorde, Paul J. and Shoop, Elizabeth and Parrish, Susan and Reed, Kelynne and Regisford, E. Gloria and Revie, Dennis and Rosenwald, Anne G. and Saville, Ken and Schroeder, Stephanie and Shaw, Mary and Skuse, Gary and Smith, Christopher and Smith, Mary and Spana, Eric P. and Spratt, Mary and Stamm, Joyce and Thompson, Jeff S. and Wawersik, Matthew and Wilson, Barbara A. and Youngblom, Jim and Leung, Wilson and Buhler, Jeremy and Mardis, Elaine R. and Lopatto, David and Elgin, Sarah C.R.},
 	editor = {Wakimoto, Barbara},
-	month = mar,
-	year = {2010},
-	pages = {55--69}
+  month = {mar},
+  year = {2010},
+  pages = {55--69}
 }
 
 @article{johnson2008,
-	title = {{NCBI} {BLAST}: a better web interface},
+	title = {NCBI BLAST: a better web interface},
 	volume = {36},
 	issn = {1362-4962},
 	doi = {10.1093/nar/gkn201},
-	shorttitle = {{NCBI} {BLAST}},
-	abstract = {Basic Local Alignment Search Tool ({BLAST}) is a sequence similarity search program. The public interface of {BLAST}, http://www.ncbi.nlm.nih.gov/blast, at the {NCBI} website has recently been reengineered to improve usability and performance. Key new features include simplified search forms, improved navigation, a list of recent {BLAST} results, saved search strategies and a documentation directory. Here, we describe the {BLAST} web application's new features, explain design decisions and outline plans for future improvement.},
 	pages = {W5--9},
 	issue = {Web Server issue},
 	journaltitle = {Nucleic Acids Research},
-	shortjournal = {Nucleic Acids Res.},
 	author = {Johnson, Mark and Zaretskaya, Irena and Raytselis, Yan and Merezhuk, Yuri and {McGinnis}, Scott and Madden, Thomas L.},
-	date = {2008-07-01},
+	month = {jul},
+	year = {2008},
 	pmid = {18440982},
-	pmcid = {PMC2447716},
-	keywords = {Databases, Genetic, Internet, National Library of Medicine (U.S.), Sequence Alignment, Software, United States, User-Computer Interface}
+	pmcid = {PMC2447716}
 }
 
 @article{priyam2019,
-	title = {Sequenceserver: {A} {Modern} {Graphical} {User} {Interface} for {Custom} {BLAST} {Databases}},
+	title = {Sequenceserver: A Modern Graphical User Interface for Custom BLAST Databases},
 	volume = {36},
 	issn = {0737-4038, 1537-1719},
-	shorttitle = {Sequenceserver},
 	url = {https://academic.oup.com/mbe/article/36/12/2922/5549819},
 	doi = {10.1093/molbev/msz185},
-	abstract = {Abstract
-            Comparing newly obtained and previously known nucleotide and amino-acid sequences underpins modern biological research. BLAST is a well-established tool for such comparisons but is challenging to use on new data sets. We combined a user-centric design philosophy with sustainable software development approaches to create Sequenceserver, a tool for running BLAST and visually inspecting BLAST results for biological interpretation. Sequenceserver uses simple algorithms to prevent potential analysis errors and provides flexible text-based and visual outputs to support researcher productivity. Our software can be rapidly installed for use by individuals or on shared servers.},
-	language = {en},
 	number = {12},
-	urldate = {2020-08-14},
 	journal = {Molecular Biology and Evolution},
 	author = {Priyam, Anurag and Woodcroft, Ben J and Rai, Vivek and Moghul, Ismail and Munagala, Alekhya and Ter, Filip and Chowdhary, Hiten and Pieniak, Iwo and Maynard, Lawrence J and Gibbins, Mark Anthony and Moon, HongKee and Davis-Richardson, Austin and Uludag, Mahmut and Watson-Haigh, Nathan S and Challis, Richard and Nakamura, Hiroyuki and Favreau, Emeline and Gómez, Esteban A and Pluskal, Tomás and Leonard, Guy and Rumpf, Wolfgang and Wurm, Yannick},
-	month = dec,
+	month = {dec},
 	year = {2019},
 	pages = {2922--2924}
 }
 
 @article{camacho2009,
-        title = {{BLAST}+: architecture and applications},
-        volume = {10},
-        issn = {1471-2105},
-        url = {https://doi.org/10.1186/1471-2105-10-421},
-        doi = {10.1186/1471-2105-10-421},
-        shorttitle = {{BLAST}+},
-        abstract = {Sequence similarity searching is a very important bioinformatics task. While Basic Local Alignment Search Tool ({BLAST}) outperforms exact methods through its use of heuristics, the speed of the current {BLAST} software is suboptimal for very long queries or database sequences. There are also some shortcomings in the user-interface of the current command-line applications.},
-        pages = {421},
-        number = {1},
-        journaltitle = {{BMC} Bioinformatics},
-        shortjournal = {{BMC} Bioinformatics},
-        author = {Camacho, Christiam and Coulouris, George and Avagyan, Vahram and Ma, Ning and Papadopoulos, Jason and Bealer, Kevin and Madden, Thomas L.},
-        urldate = {2020-08-25},
-        date = {2009-12-15},
-        file = {Snapshot:/home/mcosi/Zotero/storage/49PM6UQ9/1471-2105-10-421.html:text/html;Full Text:/home/mcosi/Zotero/storage/J8Y5TZBR/Camacho et al. - 2009 - BLAST+ architecture and applications.pdf:application/pdf}
+	title = {BLAST+: architecture and applications},
+	volume = {10},
+	issn = {1471-2105},
+	url = {https://doi.org/10.1186/1471-2105-10-421},
+	doi = {10.1186/1471-2105-10-421},
+	pages = {421},
+	number = {1},
+	journaltitle = {BMC Bioinformatics},
+	author = {Camacho, Christiam and Coulouris, George and Avagyan, Vahram and Ma, Ning and Papadopoulos, Jason and Bealer, Kevin and Madden, Thomas L.},
+	date = {2009-12-15}
 }
 
-@inproceedings{albrecht2012,
-	address = {Scottsdale, Arizona, USA},
-	series = {{SWEET} '12},
+@article{albrecht2012,
+	series = {SWEET '12},
 	title = {Makeflow: a portable abstraction for data intensive computing on clusters, clouds, and grids},
 	isbn = {9781450318761},
-	shorttitle = {Makeflow},
 	url = {https://doi.org/10.1145/2443416.2443417},
 	doi = {10.1145/2443416.2443417},
-	abstract = {In recent years, there has been a renewed interest in languages and systems for large scale distributed computing. Unfortunately, most systems available to the end user use a custom description language tightly coupled to a specific runtime implementation, making it difficult to transfer applications between systems. To address this problem we introduce Makeflow, a simple system for expressing and running a data-intensive workflow across multiple execution engines without requiring changes to the application or workflow description. Makeflow allows any user familiar with basic Unix Make syntax to generate a workflow and run it on one of many supported execution systems. Furthermore, in order to assess the performance characteristics of the various execution engines available to users and assist them in selecting one for use we introduce Workbench, a suite of benchmarks designed for analyzing common workflow patterns. We evaluate Workbench on two physical architectures -- the first a storage cluster with local disks and a slower network and the second a high performance computing cluster with a central parallel filesystem and fast network -- using a variety of execution engines. We conclude by demonstrating three applications that use Makeflow to execute data intensive applications consisting of thousands of jobs.},
-	urldate = {2020-08-14},
 	booktitle = {Proceedings of the 1st {ACM} {SIGMOD} {Workshop} on {Scalable} {Workflow} {Execution} {Engines} and {Technologies}},
 	publisher = {Association for Computing Machinery},
 	author = {Albrecht, Michael and Donnelly, Patrick and Bui, Peter and Thain, Douglas},
-	month = may,
+	month = {may},
 	year = {2012},
 	pages = {1--13}
 }
 
 @article{merchant2016,
-	title = {The {iPlant} {Collaborative}: {Cyberinfrastructure} for {Enabling} {Data} to {Discovery} for the {Life} {Sciences}},
+	title = {The iPlant Collaborative: Cyberinfrastructure for Enabling Data to Discovery for the Life Sciences},
 	volume = {14},
 	issn = {1545-7885},
-	shorttitle = {The {iPlant} {Collaborative}},
+	shorttitle = {The iPlant Collaborative},
 	url = {https://dx.plos.org/10.1371/journal.pbio.1002342},
 	doi = {10.1371/journal.pbio.1002342},
-	language = {en},
 	number = {1},
-	urldate = {2020-08-14},
 	journal = {PLOS Biology},
 	author = {Merchant, Nirav and Lyons, Eric and Goff, Stephen and Vaughn, Matthew and Ware, Doreen and Micklos, David and Antin, Parker},
-	month = jan,
+	month = {jan},
 	year = {2016},
 	pages = {e1002342}
 }
 
 @article{stewart2015,
-	address = {St. Louis, Missouri},
 	title = {Jetstream: a self-provisioned, scalable science and engineering cloud environment},
 	isbn = {9781450337205},
-	shorttitle = {Jetstream},
 	url = {http://dl.acm.org/citation.cfm?doid=2792745.2792774},
 	doi = {10.1145/2792745.2792774},
-	language = {en},
-	urldate = {2020-08-14},
-	booktitle = {Proceedings of the 2015 {XSEDE} {Conference} on {Scientific} {Advancements} {Enabled} by {Enhanced} {Cyberinfrastructure} - {XSEDE} '15},
+	booktitle = {Proceedings of the 2015 XSEDE Conference on Scientific Advancements Enabled by Enhanced Cyberinfrastructure - XSEDE '15},
 	publisher = {ACM Press},
 	author = {Stewart, Craig A. and Turner, George and Vaughn, Matthew and Gaffney, Niall I. and Cockerill, Timothy M. and Foster, Ian and Hancock, David and Merchant, Nirav and Skidmore, Edwin and Stanzione, Daniel and Taylor, James and Tuecke, Steven},
 	year = {2015},
