--- a/Paper/citations.bib
+++ b/Paper/citations.bib
@@ -77,7 +77,8 @@
 	number = {1},
 	journaltitle = {BMC Bioinformatics},
 	author = {Camacho, Christiam and Coulouris, George and Avagyan, Vahram and Ma, Ning and Papadopoulos, Jason and Bealer, Kevin and Madden, Thomas L.},
-	date = {2009-12-15}
+	month = {dec},
+	year = {2009}
 }
 
 @article{albrecht2012,
