JOSS updates & edits

--- a/Paper/citations.bib
+++ b/Paper/citations.bib
@@ -95,6 +95,19 @@
 	pages = {1--13}
 }
 
+@article{devisetty2016,
+	title = {Bringing your tools to {CyVerse} Discovery Environment using Docker},
+	volume = {5},
+	issn = {2046-1402},
+	url = {https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5070597/},
+	doi = {10.12688/f1000research.8935.1},
+	journaltitle = {F1000Research},
+	author = {Devisetty, Upendra Kumar and Kennedy, Kathleen and Sarando, Paul and Merchant, Nirav and Lyons, Eric},
+	date = {2016-06-21},
+	pmid = {27803802},
+	pmcid = {PMC5070597}
+}
+
 @article{merchant2016,
 	title = {The iPlant Collaborative: Cyberinfrastructure for Enabling Data to Discovery for the Life Sciences},
 	volume = {14},
